Fixed Openstack files